provarAnt/00D1b0000000d5bEAA/objects/Change_Comment__c.object
<CustomObject>
    <fields>
        <fullName>Change_Type__c</fullName>
        <label>Change Type</label>
        <picklist>
            <picklistValues>
                <fullName>First Response</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>First Response and Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up and Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <label>Request</label>
        <referenceTo>SLX__Change_Control__c</referenceTo>
        <relationshipLabel>Change Comments</relationshipLabel>
        <relationshipName>Change_Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Change Comment</label>
    <nameField>
        <displayFormat>CC-{YYYY}{MM}-{0}</displayFormat>
        <label>Change Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>